versioned_docs/version-2.5/reference-guides/rancher-security/security-advisories-and-cves.adoc
= Security Advisories and CVEs

Rancher is committed to informing the community of security issues in our products. Rancher will publish security advisories and CVEs (Common Vulnerabilities and Exposures) for issues we have resolved. New security advisories are also published in Rancher's GitHub https://github.com/rancher/rancher/security/advisories[security page].

|===
| ID | Description | Date | Resolution

| https://github.com/rancher/rancher/security/advisories/GHSA-7m72-mh5r-6j3r[CVE-2022-43759]
| An issue was discovered in Rancher versions from 2.5.0 up to and including 2.5.16 and from 2.6.0 up to and including 2.6.9, where an authorization logic flaw allows privilege escalation via project role template binding (PRTB) and `-promoted` roles.
| 24 January 2023
| Rancher https://github.com/rancher/rancher/releases/tag/v2.6.10[v2.6.10] and https://github.com/rancher/rancher/releases/tag/v2.5.17[v2.5.17]

| https://github.com/rancher/rancher/security/advisories/GHSA-34p5-jp77-fcrc[CVE-2022-43758]
| An issue was discovered in Rancher from versions 2.5.0 up to and including 2.5.16, 2.6.0 up to and including 2.6.9 and 2.7.0, where a command injection vulnerability is present in the Rancher Git package. This package uses the underlying Git binary available in the Rancher container image to execute Git operations. Specially crafted commands, when not properly disambiguated, can cause confusion when executed through Git, resulting in command injection in the underlying Rancher host.
| 24 January 2023
| Rancher https://github.com/rancher/rancher/releases/tag/v2.7.1[v2.7.1], https://github.com/rancher/rancher/releases/tag/v2.6.10[v2.6.10] and https://github.com/rancher/rancher/releases/tag/v2.5.17[v2.5.17]

| https://github.com/rancher/rancher/security/advisories/GHSA-cq4p-vp5q-4522[CVE-2022-43757]
| This issue affects Rancher versions from 2.5.0 up to and including 2.5.16, from 2.6.0 up to and including 2.6.9 and 2.7.0. It was discovered that the security advisory https://github.com/advisories/GHSA-g7j7-h4q8-8w2f[CVE-2021-36782], previously released by Rancher, missed addressing some sensitive fields, secret tokens, encryption keys, and SSH keys that were still being stored in plaintext directly on Kubernetes objects like `Clusters`. The exposed credentials are visible in Rancher to authenticated `Cluster Owners`, `Cluster Members`, `Project Owners` and `Project Members` of that cluster.
| 24 January 2023
| Rancher https://github.com/rancher/rancher/releases/tag/v2.7.1[v2.7.1], https://github.com/rancher/rancher/releases/tag/v2.6.10[v2.6.10] and https://github.com/rancher/rancher/releases/tag/v2.5.17[v2.5.17]

| https://github.com/rancher/rancher/security/advisories/GHSA-g25r-gvq3-wrq7[CVE-2022-21953]
| An issue was discovered in Rancher versions up to and including 2.5.16, 2.6.9 and 2.7.0, where an authorization logic flaw allows an authenticated user on any downstream cluster to (1) open a shell pod in the Rancher `local` cluster and (2) have limited kubectl access to it. The expected behavior is that a user does not have such access in the Rancher `local` cluster unless explicitly granted.
| 24 January 2023
| Rancher https://github.com/rancher/rancher/releases/tag/v2.7.1[v2.7.1], https://github.com/rancher/rancher/releases/tag/v2.6.10[v2.6.10] and https://github.com/rancher/rancher/releases/tag/v2.5.17[v2.5.17]

| https://github.com/rancher/rancher/security/advisories/GHSA-c45c-39f6-6gw9[GHSA-c45c-39f6-6gw9]
| This issue affects Rancher versions from 2.5.0 up to and including 2.5.16, from 2.6.0 up to and including 2.6.9 and 2.7.0. It only affects Rancher setups that have an external authentication provider configured or had one configured in the past. It was discovered that when an external authentication provider is configured in Rancher and then disabled, the Rancher generated tokens associated with users who had access granted through the now disabled auth provider are not revoked.
| 24 January 2023
| Rancher https://github.com/rancher/rancher/releases/tag/v2.7.1[v2.7.1], https://github.com/rancher/rancher/releases/tag/v2.6.10[v2.6.10] and https://github.com/rancher/rancher/releases/tag/v2.5.17[v2.5.17]

| https://github.com/rancher/rancher/security/advisories/GHSA-6x34-89p7-95wg[CVE-2022-31247]
| An issue was discovered in Rancher versions up to and including 2.5.15 and 2.6.6 where a flaw with authorization logic allows privilege escalation in downstream clusters through cluster role template binding (CRTB) and project role template binding (PRTB). The vulnerability can be exploited by any user who has permissions to create/edit CRTB or PRTB (such as `cluster-owner`, `manage cluster members`, `project-owner`, and `manage project members`) to gain owner permission in another project in the same cluster or in another project on a different downstream cluster.
| 18 August 2022
| https://github.com/rancher/rancher/releases/tag/v2.6.7[Rancher v2.6.7] and https://github.com/rancher/rancher/releases/tag/v2.5.16[Rancher v2.5.16]

| https://github.com/rancher/rancher/security/advisories/GHSA-8w87-58w6-hfv8[CVE-2021-36783]
| It was discovered that in Rancher versions up to and including 2.5.12 and 2.6.3, there is a failure to properly sanitize credentials in cluster template answers. This failure can lead to plaintext storage and exposure of credentials, passwords, and API tokens. The exposed credentials are visible in Rancher to authenticated `Cluster Owners`, `Cluster Members`, `Project Owners`, and `Project Members` on the endpoints `/v1/management.cattle.io.clusters`, `/v3/clusters`, and `/k8s/clusters/local/apis/management.cattle.io/v3/clusters`.
| 18 August 2022
| https://github.com/rancher/rancher/releases/tag/v2.6.7[Rancher v2.6.7] and https://github.com/rancher/rancher/releases/tag/v2.5.16[Rancher v2.5.16]

| https://github.com/rancher/rancher/security/advisories/GHSA-g7j7-h4q8-8w2f[CVE-2021-36782]
| An issue was discovered in Rancher versions up to and including 2.5.15 and 2.6.6 where sensitive fields like passwords, API keys, and Rancher's service account token (used to provision clusters) were stored in plaintext directly on Kubernetes objects like `Clusters` (e.g., `cluster.management.cattle.io`). Anyone with read access to those objects in the Kubernetes API could retrieve the plaintext version of those sensitive data. The issue was partially found and reported by Florian Struck (from https://www.continum.net/[Continum AG]) and https://github.com/fe-ax[Marco Stuurman] (from https://www.shockmedia.nl/[Shock Media B.V.]).
| 18 August 2022
| https://github.com/rancher/rancher/releases/tag/v2.6.7[Rancher v2.6.7] and https://github.com/rancher/rancher/releases/tag/v2.5.16[Rancher v2.5.16]

| https://github.com/rancher/rancher/security/advisories/GHSA-vrph-m5jj-c46c[CVE-2022-21951]
| This vulnerability only affects customers using https://rancher.com/docs/rancher/v2.6/en/faq/networking/cni-providers/#weave[Weave] Container Network Interface (CNI) when configured through https://rancher.com/docs/rancher/v2.6/en/admin-settings/rke-templates/[RKE templates]. A vulnerability was discovered in Rancher versions 2.5.0 up to and including 2.5.13, and 2.6.0 up to and including 2.6.4, where a user interface (UI) issue with RKE templates does not include a value for the Weave password when Weave is chosen as the CNI. If a cluster is created based on the mentioned template, and Weave is configured as the CNI, no password will be created for https://github.com/weaveworks/weave/blob/master/site/tasks/manage/security-untrusted-networks.md[network encryption] in Weave; therefore, network traffic in the cluster will be sent unencrypted.
| 24 May 2022
| https://github.com/rancher/rancher/releases/tag/v2.6.5[Rancher v2.6.5] and https://github.com/rancher/rancher/releases/tag/v2.5.14[Rancher v2.5.14]

| https://github.com/rancher/rancher/security/advisories/GHSA-jwvr-vv7p-gpwq[CVE-2021-36784]
| A vulnerability was discovered in Rancher versions from 2.5.0 up to and including 2.5.12 and from 2.6.0 up to and including 2.6.3 which allows users who have create or update permissions on https://rancher.com/docs/rancher/v2.6/en/admin-settings/rbac/[Global Roles] to escalate their permissions, or those of another user, to admin-level permissions. Global Roles grant users Rancher-wide permissions, such as the ability to create clusters. In the identified versions of Rancher, when users are given permission to edit or create Global Roles, they are not restricted to only granting permissions which they already posses. This vulnerability affects customers who utilize non-admin users that are able to create or edit Global Roles. The most common use case for this scenario is the `restricted-admin` role.
| 14 Apr 2022
| https://github.com/rancher/rancher/releases/tag/v2.6.4[Rancher v2.6.4] and https://github.com/rancher/rancher/releases/tag/v2.5.13[Rancher v2.5.13]

| https://github.com/rancher/rancher/security/advisories/GHSA-hx8w-ghh8-r4xf[CVE-2021-4200]
| This vulnerability only affects customers using the `restricted-admin` role in Rancher. A vulnerability was discovered in Rancher versions from 2.5.0 up to and including 2.5.12 and from 2.6.0 up to and including 2.6.3 where the `global-data` role in `cattle-global-data` namespace grants write access to the Catalogs. Since each user with any level of catalog access was bound to the `global-data` role, this grants write access to templates (`CatalogTemplates`) and template versions (`CatalogTemplateVersions`) for any user with any level of catalog access. New users created in Rancher are by default assigned to the `user` role (standard user), which is not designed to grant write catalog access. This vulnerability effectively elevates the privilege of any user to write access for the catalog template and catalog template version resources.
| 14 Apr 2022
| https://github.com/rancher/rancher/releases/tag/v2.6.4[Rancher v2.6.4] and https://github.com/rancher/rancher/releases/tag/v2.5.13[Rancher v2.5.13]

| https://github.com/rancher/rancher/security/advisories/GHSA-wm2r-rp98-8pmh[GHSA-wm2r-rp98-8pmh]
| This vulnerability only affects customers using https://rancher.com/docs/rancher/v2.6/en/deploy-across-clusters/fleet/[Fleet] for continuous delivery with authenticated Git and/or Helm repositories. An issue was discovered in `go-getter` library in versions prior to https://github.com/hashicorp/go-getter/releases/tag/v1.5.11[`v1.5.11`] that exposes SSH private keys in base64 format due to a failure in redacting such information from error messages. The vulnerable version of this library is used in Rancher through Fleet in versions of Fleet prior to https://github.com/rancher/fleet/releases/tag/v0.3.9[`v0.3.9`]. This issue affects Rancher versions 2.5.0 up to and including 2.5.12 and from 2.6.0 up to and including 2.6.3. The issue was found and reported by Dagan Henderson from Raft Engineering.
| 14 Apr 2022
| https://github.com/rancher/rancher/releases/tag/v2.6.4[Rancher v2.6.4] and https://github.com/rancher/rancher/releases/tag/v2.5.13[Rancher v2.5.13]

| https://github.com/rancher/rancher/security/advisories/GHSA-4fc7-hc63-7fjg[CVE-2021-36778]
| A vulnerability was discovered in Rancher versions from 2.5.0 up to and including 2.5.11 and from 2.6.0 up to and including 2.6.2, where an insufficient check of the same-origin policy when downloading Helm charts from a configured private repository can lead to exposure of the repository credentials to a third-party provider. This issue only happens when the user configures access credentials to a private repository in Rancher inside `Apps & Marketplace > Repositories`. The issue was found and reported by Martin Andreas Ullrich.
| 14 Apr 2022
| https://github.com/rancher/rancher/releases/tag/v2.6.3[Rancher v2.6.3] and https://github.com/rancher/rancher/releases/tag/v2.5.12[Rancher v2.5.12]

| https://github.com/rancher/rancher/security/advisories/GHSA-hwm2-4ph6-w6m5[GHSA-hwm2-4ph6-w6m5]
| A vulnerability was discovered in versions of Rancher starting 2.0 up to and including 2.6.3. The `restricted` pod security policy (PSP) provided in Rancher deviated from the upstream `restricted` policy provided in Kubernetes on account of which Rancher's PSP had `runAsUser` set to `runAsAny`, while upstream had `runAsUser` set to `MustRunAsNonRoot`. This allowed containers to run as any user, including a privileged user (`root`), even when Rancher's `restricted` policy was enforced on a project or at the cluster level.
| 31 Mar 2022
| https://github.com/rancher/rancher/releases/tag/v2.6.4[Rancher v2.6.4]

| https://github.com/rancher/rancher/security/advisories/GHSA-28g7-896h-695v[CVE-2021-36775]
| A vulnerability was discovered in Rancher versions up to and including 2.4.17, 2.5.11 and 2.6.2. After removing a `Project Role` associated with a group from the project, the bindings that granted access to cluster-scoped resources for those subjects were not deleted. This was due to an incomplete authorization logic check. A user who was a member of the affected group with authenticated access to Rancher could exploit this vulnerability to access resources they shouldn't have had access to. The exposure level would depend on the original permission level granted to the affected project role. This vulnerability only affected customers using group based authentication in Rancher.
| 31 Mar 2022
| https://github.com/rancher/rancher/releases/tag/v2.6.3[Rancher v2.6.3], https://github.com/rancher/rancher/releases/tag/v2.5.12[Rancher v2.5.12] and https://github.com/rancher/rancher/releases/tag/v2.4.18[Rancher v2.4.18]

| https://github.com/rancher/rancher/security/advisories/GHSA-gvh9-xgrq-r8hw[CVE-2021-36776]
| A vulnerability was discovered in Rancher versions starting 2.5.0 up to and including 2.5.9, that allowed an authenticated user to impersonate any user on a cluster through an API proxy, without requiring knowledge of the impersonated user's credentials. This was due to the API proxy not dropping the impersonation header before sending the request to the Kubernetes API. A malicious user with authenticated access to Rancher could use this to impersonate another user with administrator access in Rancher, thereby gaining administrator level access to the cluster.
| 31 Mar 2022
| https://github.com/rancher/rancher/releases/tag/v2.6.0[Rancher v2.6.0] and https://github.com/rancher/rancher/releases/tag/v2.5.10[Rancher v2.5.10]

| https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-25318[CVE-2021-25318]
| A vulnerability was discovered in Rancher versions 2.0 through the aforementioned fixed versions, where users were granted access to resources regardless of the resource's API group. For example, Rancher should have allowed users access to `apps.catalog.cattle.io`, but instead incorrectly gave access to `apps.*`. Resources affected in the *Downstream clusters* and *Rancher management cluster* can be found https://github.com/rancher/rancher/security/advisories/GHSA-f9xf-jq4j-vqw4[here]. There is not a direct mitigation besides upgrading to the patched Rancher versions.
| 14 Jul 2021
| https://github.com/rancher/rancher/releases/tag/v2.5.9[Rancher v2.5.9] and https://github.com/rancher/rancher/releases/tag/v2.4.16[Rancher v2.4.16]

| https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-31999[CVE-2021-31999]
| A vulnerability was discovered in Rancher 2.0.0 through the aforementioned patched versions, where a malicious Rancher user could craft an API request directed at the proxy for the Kubernetes API of a managed cluster to gain access to information they do not have access to. This is done by passing the "Impersonate-User" or "Impersonate-Group" header in the Connection header, which is then correctly removed by the proxy. At this point, instead of impersonating the user and their permissions, the request will act as if it was from the Rancher management server and incorrectly return the information. The vulnerability is limited to valid Rancher users with some level of permissions on the cluster. There is not a direct mitigation besides upgrading to the patched Rancher versions.
| 14 Jul 2021
| https://github.com/rancher/rancher/releases/tag/v2.5.9[Rancher v2.5.9] and https://github.com/rancher/rancher/releases/tag/v2.4.16[Rancher v2.4.16]

| https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-25320[CVE-2021-25320]
| A vulnerability was discovered in Rancher 2.2.0 through the aforementioned patched versions, where cloud credentials weren't being properly validated through the Rancher API. Specifically through a proxy designed to communicate with cloud providers. Any Rancher user that was logged-in and aware of a cloud-credential ID that was valid for a given cloud provider, could call that cloud provider's API through the proxy API, and the cloud-credential would be attached. The exploit is limited to valid Rancher users. There is not a direct mitigation outside of upgrading to the patched Rancher versions.
| 14 Jul 2021
| https://github.com/rancher/rancher/releases/tag/v2.5.9[Rancher v2.5.9] and https://github.com/rancher/rancher/releases/tag/v2.4.16[Rancher v2.4.16]

| https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-25313[CVE-2021-25313]
| A security vulnerability was discovered on all Rancher 2 versions. When accessing the Rancher API with a browser, the URL was not properly escaped, making it vulnerable to an XSS attack. Specially crafted URLs to these API endpoints could include JavaScript which would be embedded in the page and execute in a browser. There is no direct mitigation. Avoid clicking on untrusted links to your Rancher server.
| 2 Mar 2021
| https://github.com/rancher/rancher/releases/tag/v2.5.6[Rancher v2.5.6], https://github.com/rancher/rancher/releases/tag/v2.4.14[Rancher v2.4.14], and https://github.com/rancher/rancher/releases/tag/v2.3.11[Rancher v2.3.11]

| https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-14435[CVE-2019-14435]
| This vulnerability allows authenticated users to potentially extract otherwise private data out of IPs reachable from system service containers used by Rancher. This can include but not only limited to services such as cloud provider metadata services. Although Rancher allow users to configure whitelisted domains for system service access, this flaw can still be exploited by a carefully crafted HTTP request. The issue was found and reported by Matt Belisle and Alex Stevenson at Workiva.
| 5 Aug 2019
| https://github.com/rancher/rancher/releases/tag/v2.2.7[Rancher v2.2.7] and https://github.com/rancher/rancher/releases/tag/v2.1.12[Rancher v2.1.12]

| https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-14436[CVE-2019-14436]
| The vulnerability allows a member of a project that has access to edit role bindings to be able to assign themselves or others a cluster level role granting them administrator access to that cluster. The issue was found and reported by Michal Lipinski at Nokia.
| 5 Aug 2019
| https://github.com/rancher/rancher/releases/tag/v2.2.7[Rancher v2.2.7] and https://github.com/rancher/rancher/releases/tag/v2.1.12[Rancher v2.1.12]

| https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-13209[CVE-2019-13209]
| The vulnerability is known as a https://www.christian-schneider.net/CrossSiteWebSocketHijacking.html[Cross-Site Websocket Hijacking attack]. This attack allows an exploiter to gain access to clusters managed by Rancher with the roles/permissions of a victim. It requires that a victim to be logged into a Rancher server and then access a third-party site hosted by the exploiter. Once that is accomplished, the exploiter is able to execute commands against the Kubernetes API with the permissions and identity of the victim. Reported by Matt Belisle and Alex Stevenson from Workiva.
| 15 Jul 2019
| https://github.com/rancher/rancher/releases/tag/v2.2.5[Rancher v2.2.5], https://github.com/rancher/rancher/releases/tag/v2.1.11[Rancher v2.1.11] and https://github.com/rancher/rancher/releases/tag/v2.0.16[Rancher v2.0.16]

| https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-12303[CVE-2019-12303]
| Project owners can inject extra fluentd logging configurations that makes it possible to read files or execute arbitrary commands inside the fluentd container. Reported by Tyler Welton from Untamed Theory.
| 5 Jun 2019
| https://github.com/rancher/rancher/releases/tag/v2.2.4[Rancher v2.2.4], https://github.com/rancher/rancher/releases/tag/v2.1.10[Rancher v2.1.10] and https://github.com/rancher/rancher/releases/tag/v2.0.15[Rancher v2.0.15]

| https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-12274[CVE-2019-12274]
| Nodes using the built-in node drivers using a file path option allows the machine to read arbitrary files including sensitive ones from inside the Rancher server container.
| 5 Jun 2019
| https://github.com/rancher/rancher/releases/tag/v2.2.4[Rancher v2.2.4], https://github.com/rancher/rancher/releases/tag/v2.1.10[Rancher v2.1.10] and https://github.com/rancher/rancher/releases/tag/v2.0.15[Rancher v2.0.15]

| https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-11202[CVE-2019-11202]
| The default admin, that is shipped with Rancher, will be re-created upon restart of Rancher despite being explicitly deleted.
| 16 Apr 2019
| https://github.com/rancher/rancher/releases/tag/v2.2.2[Rancher v2.2.2], https://github.com/rancher/rancher/releases/tag/v2.1.9[Rancher v2.1.9] and https://github.com/rancher/rancher/releases/tag/v2.0.14[Rancher v2.0.14]

| https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-6287[CVE-2019-6287]
| Project members continue to get access to namespaces from projects that they were removed from if they were added to more than one project.
| 29 Jan 2019
| https://github.com/rancher/rancher/releases/tag/v2.1.6[Rancher v2.1.6] and https://github.com/rancher/rancher/releases/tag/v2.0.11[Rancher v2.0.11]

| https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2018-20321[CVE-2018-20321]
| Any project member with access to the `default` namespace can mount the `netes-default` service account in a pod and then use that pod to execute administrative privileged commands against the Kubernetes cluster.
| 29 Jan 2019
| https://github.com/rancher/rancher/releases/tag/v2.1.6[Rancher v2.1.6] and https://github.com/rancher/rancher/releases/tag/v2.0.11[Rancher v2.0.11] - Rolling back from these versions or greater have specific xref:../../getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/rollbacks.adoc[instructions].
|===
